Fix concurrent exception